--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
 		<!-- Links -->
 		<div class="linkbox section">
 			<!-- <a class="link" href="about.html">about</a> -->
-			<a class="link" href="http://blog.jitix.net" target="_blank">blog</a>
-			<a class="link" href="http://github.com/jitix">work</a>
+			<a href="http://blog.jitix.net" target="_blank">blog</a>
+			<!-- <a href="http://github.com/jitix">work</a> -->
 			<a class="link" href="resume.html">resume</a>
-			<a class="link" href="mailto:jit@jitix.net">contact</a>
+			<a href="mailto:jit@jitix.net">contact</a>
 		</div>
 		
 		<br/>
@@ -35,9 +35,11 @@
 		
 		<!-- Profiles -->
 		<div class="profiles section">
-			My Profiles: <br/>
-			StackOverflow<br/>
-			Twitter<br/>
+			<a class="link" href="https://twitter.com/jit_x87">Twitter</a>
+			<a class="link" href="https://in.linkedin.com/in/soumyajitb">LinkedIn</a><br/>
+			<a class="link" href="https://github.com/jitix">GitHub</a>
+			<a class="link" href="http://stackexchange.com/users/922247/jit-b">Stack Exchange</a><br/>
+			
 		</div>
 	</body>
 </html>
